[package]
name = "backend"
version = "0.1.0"
edition.workspace = true
authors = ["Ryoji Uehara <72393752+u-na-gi@users.noreply.github.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http', 'axum'] }
worker-macros = { version = "0.5.0", features = ['http'] }
axum = { version = "0.7.5", default-features = false, features = [
  "json",
  "query",
] }
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["cors"] }
time = { version = "0.3.36", features = ["wasm-bindgen", "serde"] }
proto = { version = "0.1.0", path = "../proto" }
chrono = { version = "0.4.41", default-features = false, features = [
  "serde",
  "wasmbind",
] }
prost = "0.13"
# Only necessary if using Protobuf well-known types:
prost-types = "0.13"

serde = { version = "1.0", features = ["derive"] }
jwt-compact = "0.8.0"
anyhow = "1.0.98"


[dev-dependencies]
wasm-bindgen-test = "0.3.0"
log = "0.4"
tokio = { version = "1", features = ["full", "test-util"] }


[dependencies.web-sys]
version = "0.3.44"
features = ['console']
